--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,7 @@ nav li.active {
 nav a {
   display: block;
   padding: 0.75rem;
-  color: #A64C38;
+  color: black;
   text-align: center;
   text-decoration: none;
 }
@@ -388,6 +388,7 @@ footer p {
   margin: 0;
   font-weight: 300;
   text-align: center;
+  color: black;
 }
 
 @media only screen and (min-width: 35rem) {
