--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -53,11 +53,11 @@ nav {
   a {
     display: block;
     padding: 0.75rem;
-    color: $fontColor;
+    color: black;
     text-align: center;
     text-decoration: none;
     &:hover {
-      color: #D90416;
+      color: $primaryColor;
     }
   }
 }
@@ -71,5 +71,6 @@ footer {
     margin: 0;
     font-weight: $lightWeight;
     text-align: center;
+    color: black;
   }
 }
